--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -153,12 +153,10 @@ h4 {
   color: white;
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
+.cursor-pointer,
+.cursor-pointer:hover,
+.cursor-pointer:active {
+  cursor: pointer;
 }
 
 input,
@@ -177,4 +175,12 @@ button:hover {
   background-color: black;
   color: white;
   font-size: 20px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
 }
